welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  for (i<- 0 to 5){
    avance()
    if(estSurBiscuit()){
      vuBiscuit=true
    }
  }
  for (i<- 0 to 5){
    recule
  }
  if(vuBiscuit) return
}